src/objects/Apttus_Config2__CategoryTranslation__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__CategoryHierarchy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CategoryHierarchy</label>
        <referenceTo>Apttus_Config2__ClassificationHierarchy__c</referenceTo>
        <relationshipLabel>CategoryTranslations</relationshipLabel>
        <relationshipName>Translation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Language__c</fullName>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CategoryTranslation</label>
    <listViews>
        <fullName>Apttus_Config2__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CategoryTranslation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CategoryTranslations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>